# shiftmanager

./: .env.example  .gitignore  LICENSE  design document.rtf  pyproject.toml
src/shiftbot/: __main__.py  bot.py  config.py  db.py  parsing.py  timeutil.py
src/shiftbot/cogs/: config_cog.py  deliverables.py  shift.py  stats.py
tests/: test_db.py  test_parsing.py  test_timeutil.py
